; ModuleID = '/home/carl/AnghaBench/vlc/src/interface/extr_interface.c_intf_InsertItem.c'
source_filename = "/home/carl/AnghaBench/vlc/src/interface/extr_interface.c_intf_InsertItem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @intf_InsertItem(i32* %0, i8* %1, i32 %2, i8** %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8**, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8** %3, i8*** %10, align 8
  store i32 %4, i32* %11, align 4
  %15 = load i8*, i8** %8, align 8
  %16 = call i32* @input_item_New(i8* %15, i32* null)
  store i32* %16, i32** %12, align 8
  %17 = load i32*, i32** %12, align 8
  %18 = icmp eq i32* %17, null
  %19 = zext i1 %18 to i32
  %20 = call i64 @unlikely(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %49

23:                                               ; preds = %5
  store i32 -1, i32* %13, align 4
  %24 = load i32*, i32** %12, align 8
  %25 = load i32, i32* %9, align 4
  %26 = load i8**, i8*** %10, align 8
  %27 = load i32, i32* %11, align 4
  %28 = call i64 @input_item_AddOptions(i32* %24, i32 %25, i8** %26, i32 %27)
  %29 = load i64, i64* @VLC_SUCCESS, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %45

31:                                               ; preds = %23
  %32 = load i32*, i32** %7, align 8
  %33 = call i32* @libvlc_GetMainPlaylist(i32* %32)
  store i32* %33, i32** %14, align 8
  %34 = load i32*, i32** %14, align 8
  %35 = icmp ne i32* %34, null
  br i1 %35, label %36, label %44

36:                                               ; preds = %31
  %37 = load i32*, i32** %14, align 8
  %38 = call i32 @vlc_playlist_Lock(i32* %37)
  %39 = load i32*, i32** %14, align 8
  %40 = load i32*, i32** %12, align 8
  %41 = call i32 @vlc_playlist_InsertOne(i32* %39, i32 0, i32* %40)
  store i32 %41, i32* %13, align 4
  %42 = load i32*, i32** %14, align 8
  %43 = call i32 @vlc_playlist_Unlock(i32* %42)
  br label %44

44:                                               ; preds = %36, %31
  br label %45

45:                                               ; preds = %44, %23
  %46 = load i32*, i32** %12, align 8
  %47 = call i32 @input_item_Release(i32* %46)
  %48 = load i32, i32* %13, align 4
  store i32 %48, i32* %6, align 4
  br label %49

49:                                               ; preds = %45, %22
  %50 = load i32, i32* %6, align 4
  ret i32 %50
}

declare dso_local i32* @input_item_New(i8*, i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i64 @input_item_AddOptions(i32*, i32, i8**, i32) #1

declare dso_local i32* @libvlc_GetMainPlaylist(i32*) #1

declare dso_local i32 @vlc_playlist_Lock(i32*) #1

declare dso_local i32 @vlc_playlist_InsertOne(i32*, i32, i32*) #1

declare dso_local i32 @vlc_playlist_Unlock(i32*) #1

declare dso_local i32 @input_item_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
